# nfmer

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.api  LICENSE  Makefile  README.md  docker-compose.yml  openapi.json  pyproject.toml
docs/: developer_guide.md
nfmer/: NFMscraper.py  scraper.py
nfmer/api/templates/: base.html  composer_detail.html  composition_detail.html  error.html  index.html
nfmer/api/templates/partials/: search_results.html
nfmer/api/v1/: api.py
nfmer/api/v1/routers/: composers.py  compositions.py  events.py  pages.py
nfmer/db_handler/: __init__.py
nfmer/frontend/: asgi.py
nfmer/frontend/frontend/: settings.py  urls.py
nfmer/frontend/search/: services.py  urls.py  views.py
nfmer/frontend/search/templates/search/: base.html  composer_detail.html  composition_detail.html  error.html  index.html
nfmer/frontend/search/templates/search/partials/: search_results.html
nfmer/models/: __init__.py
nfmer/scraper/: __init__.py  db_handler.py  fetcher.py  parser.py  scraper.py
tests/test_api/: test_composers.py  test_compositions.py  test_events.py  test_pages.py
tests/test_db_handler/: conftest.py  test_db_handler.py
tests/test_scraper/: test_fetcher.py  test_parser.py  test_scraper.py
utils/: historical_scraper.py  schema_generator.py
