[tool.poetry]
name = "nfmer"
version = "0.1.0"
description = ""
authors = ["Piotr Dindorf <piotr.dindorf@mailo.com>"]
readme = "README.md"
packages = [
    { include = "nfmer" },
    { include = "nfmer/scraper" },
    { include = "nfmer/db_handler" }
]

[tool.poetry.dependencies]
python = "^3.11"
bs4 = "^0.0.1"
httpx = "^0.28.1"
tenacity = "^9.0.0"
sqlalchemy = "^2.0.37"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
pytest-mock = "3.14.0"
coverage = "^7.6.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
